--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indian Kanoon Search</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-
 </head>
 <body>
     <div class="container">
@@ -16,7 +13,7 @@
             <input type="text" id="searchInput" placeholder="Enter search query...">
             <button onclick="performSearch()">Search</button>
         </div>
-        <div id="results"></div>
+        <div id="results" class="results-container"></div>
     </div>
     <script src="script.js"></script>
 </body>
